corrected font problem on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -11,19 +11,15 @@ button {
 body {
   background-color: #f3f3f3;
 }
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+/* body { */
+  /* margin: 0; */
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  
+} */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+ 
 
 /*                 product page       */
 .product-image {
@@ -214,7 +210,7 @@ tr button {
 .prdt-qty {
   display: inline-block;
   border: 2px solid black;
-  font-size: 16px;
+  font-size: 20px;
   height: 25px;
   width: 25px;
   text-align: center;
@@ -248,7 +244,7 @@ svg {
   display: block;
   margin-top: 10px;
   width: 150px;
-  font-size: 19px;
+  font-size: 17px;
   margin-left: auto;
   margin-right: 160px;
   font-weight: bold;
